# exsh

./: .gitignore  CMakeLists.txt  README.md
src/shell/: builtins.c  main.c  runner.c
tests/: exsh_test_harness.py  run.sh
tests/tests/: array_assignment.exsh  bash_parity_directory_stack.exsh  dash_c_option.exsh  lexer_assignment_context.exsh  lexer_expansion_shapes.exsh  pipeline_bg_tool_kill_cleanup_ios.exsh  pipeline_bg_tool_redirect_ios.exsh  shebang_exec.exsh  source_dot_alias.exsh  thread_spawn_builtin_success.exsh
